--- a/templates/success.html
+++ b/templates/success.html
@@ -1,8 +1,12 @@
+{% extends 'base.html' %}
 {% load static %}
 {% block head %}
 
  {% endblock  %}
 {%  block content %}
-    
+    <div class="success-msg">
+    <h1> Sucess !</h1>
     <p>Form completed Successfully</p>
+    
+    </div>
 {%  endblock %}
