--- a/templates/roadway_near_school.html
+++ b/templates/roadway_near_school.html
@@ -35,7 +35,16 @@
                 <option value="---">Choose One option</option>
                 <option value="Two-Way">Two Way</option>
                 <option value="One-Way">One Way</option>
+                <option value="Partial-One-Way">Partial One Way</option>
+                <option value="Partial-Two-Way">Partial Two Way</option>
             </select>
+            <div id="partial_time" class="hidden">
+                <label for="Partial_One_Way_Time_Start_Time">Start Time</label>
+                <input type="time" name="partial_start_time" id="Partial_One_Way_Time_Start_Time" />
+
+                <label for="Partial_One_Way_Time_Close_Time">Close Time</label>
+                <input type="time" name="partial_end_time" id="Partial_One_Way_Time_Close_Time" />
+            </div>
 
             <div id="twoway" class="hidden">
                 <input type="radio" id="North-South" name="carriage_way_direction_two_way" value="North-South">
@@ -45,15 +54,14 @@
                 <label for="East-West">East-West</label><br>
                 <br>
 
-                <label for="Patial_Two_way">Partial Two Way </label>
-                <input type="radio" id="Partial_Two_way_yes" name="partial_two_way" value="Yes"
-                    onclick="loadBlockPartialYes();">
-                <label for="Patial_Two_way_yes">Yes</label>
-
-                <input type="radio" id="Partial_Two_way_no" name="partial_two_way" value="No"
-                    onclick="loadBlockPartialNo();">
-                <label for="Patial_Two_way_no">No</label>
-
+{#                <label for="Patial_Two_way">Partial Two Way </label>#}
+{#                <input type="radio" id="Partial_Two_way_yes" name="partial_two_way" value="Yes"#}
+{#                    onclick="loadBlockPartialYes();">#}
+{#                <label for="Patial_Two_way_yes">Yes</label>#}
+{##}
+{#                <input type="radio" id="Partial_Two_way_no" name="partial_two_way" value="No"#}
+{#                    onclick="loadBlockPartialNo();">#}
+{#                <label for="Patial_Two_way_no">No</label>#}
             </div>
 
             <div id="oneway" class="hidden">
@@ -69,23 +77,17 @@
                 <input type="radio" id="West" name="carriage_way_direction_oneway" value="West">
                 <label for="West">West</label><br><br>
 
-                <label for="Patial_One_way">Partial One Way </label>
-                <input type="radio" id="Partial_One_way_yes" name="partial_one_way" value="Yes"
-                    onclick="loadBlockPartialYes();">
-                <label for="Patial_One_way_yes">Yes</label>
-
-                <input type="radio" id="Partial_One_way_no" name="partial_one_way" value="No"
-                    onclick="loadBlockPartialNo();">
-                <label for="Patial_One_way_no">No</label>
+{#                <label for="Patial_One_way">Partial One Way </label>#}
+{#                <input type="radio" id="Partial_One_way_yes" name="partial_one_way" value="Yes"#}
+{#                    onclick="loadBlockPartialYes();">#}
+{#                <label for="Patial_One_way_yes">Yes</label>#}
+{##}
+{#                <input type="radio" id="Partial_One_way_no" name="partial_one_way" value="No"#}
+{#                    onclick="loadBlockPartialNo();">#}
+{#                <label for="Patial_One_way_no">No</label>#}
 
             </div>
-            <div id="partial_time" class="hidden">
-                <label for="Partial_One_Way_Time_Start_Time">Start Time</label>
-                <input type="time" name="partial_start_time" id="Partial_One_Way_Time_Start_Time" />
 
-                <label for="Partial_One_Way_Time_Close_Time">Close Time</label>
-                <input type="time" name="partial_end_time" id="Partial_One_Way_Time_Close_Time" />
-            </div>
 
         </div>
 
@@ -204,6 +206,7 @@
                     <option value="One">1</option>
                     <option value="Two">2</option>
                     <option value="Three">3</option>
+                    <option value="Four">4</option>
                 </select>
                 <div id="trafficlight1" class="hidden">
                     <label for="traffic_lights_pictures"> 10.3 Upload Picture of the System:</label><br>
@@ -222,9 +225,13 @@
                     <label for="traffic_lights_pic3">Traffic Light 3 :</label>
                     <input type="file" id="traffic_lights_pic3" name="traffic_lights_pic3">
                 </div>
-
-
-
+                
+                <div id="trafficlight4" class="hidden">
+                    <br><br>
+                    <label for="traffic_lights_pic4">Traffic Light 4 :</label>
+                    <input type="file" id="traffic_lights_pic4" name="traffic_lights_pic4">
+                </div>
+                
             </div>
 
 
@@ -234,7 +241,7 @@
     <fieldset>
         <legend>Zebra Crossings In Proximity</legend>
         <div class="form-group">
-            <label>11. Are there zebra crossings in proximity?</label>
+            <label>11. Are there zebra crossings in proximity?</label><br>
             <input type="radio" id="zebra_crossings_yes" name="zebra_crossings" value="Yes" required>
             <label for="zebra_crossings_yes">Yes</label>
             <input type="radio" id="zebra_crossings_no" name="zebra_crossings" value="No">
@@ -263,7 +270,7 @@
     <fieldset>
         <legend>Foot-over Bridge In Proximity</legend>
         <div class="form-group">
-            <label>12. Is there a foot-over bridge in proximity?</label>
+            <label>12. Is there a foot-over bridge in proximity?</label><br>
             <input type="radio" id="foot_over_bridge_yes" name="foot_over_bridge" value="Yes" required>
             <label for="foot_over_bridge_yes">Yes</label>
             <input type="radio" id="foot_over_bridge_no" name="foot_over_bridge" value="No">
@@ -351,7 +358,7 @@
     <fieldset>
         <legend>On Street Vehicle Parking</legend>
         <div class="form-group">
-            <label>12. Is there on street vehicle parking in proximity?</label>
+            <label>12. Is there on street vehicle parking in proximity?</label><br>
             <input type="radio" id="on_street_vehicle_parking_none" name="on_street_vehicle_parking" value="None"
                 required>
             <label for="on_street_vehicle_parking_none">None</label><br>
@@ -368,7 +375,7 @@
                     name="on_street_vehicle_parking_picture_one" multiple>
             </div>
 
-            <label for="on_street_vehicle_parking_map_one">Pin-point Foot-over Bridge Location:</label>
+            <label for="on_street_vehicle_parking_map_one">Pin-point On Street Vehicle Parking Location 1:</label>
             <input type="text" id="on_street_vehicle_parking_map_coordinate_one"
                 name="on_street_vehicle_parking_map_coordinate_one" placeholder="Pin-point on map" readonly>
             <button type="button" class="btnGetLoc" id="btnGetLoc">Locate Me</button>
@@ -383,7 +390,7 @@
                     name="on_street_vehicle_parking_picture_two" multiple>
             </div>
 
-            <label for="on_street_vehicle_parking_map_two">Pin-point Foot-over Bridge Location:</label>
+            <label for="on_street_vehicle_parking_map_two">Pin-point On Street Vehicle Parking Location 2:</label>
             <input type="text" id="on_street_vehicle_parking_map_coordinate_two"
                 name="on_street_vehicle_parking_map_coordinate_two" placeholder="Pin-point on map" readonly>
             <button type="button" class="btnGetLoc" id="btnGetLoc">Locate Me</button>
@@ -411,8 +418,6 @@
     <button type="submit">Submit</button>
 </form>
 <!-- Leaflet JS -->
-<!-- Leaflet JS -->
-<    <!-- Leaflet JS -->
      <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
          crossorigin=""></script>
@@ -571,15 +576,35 @@
     document.getElementById('carriage_Way_Direction').addEventListener('change', function () {
         const twoway = document.getElementById('twoway');
         const oneway = document.getElementById('oneway');
+        const partial_time = document.getElementById('partial_time');
+        
 
 
         if (this.value === 'Two-Way') {
             twoway.classList.remove('hidden');
             oneway.classList.add('hidden');
-
-        } else if (this.value === 'One-Way') {
+            partial_time.classList.add('hidden');
+        } 
+        else if (this.value === 'One-Way') {
             twoway.classList.add('hidden');
             oneway.classList.remove('hidden');
+            partial_time.classList.add('hidden');
+        } 
+        else if (this.value === 'Partial-One-Way') {
+            twoway.classList.add('hidden');
+            oneway.classList.remove('hidden');
+            partial_time.classList.remove('hidden');
+        }
+         else if (this.value === 'Partial-Two-Way') {
+            twoway.classList.remove('hidden');
+            oneway.classList.add('hidden');
+            partial_time.classList.remove('hidden');
+        }
+         else{
+             twoway.classList.add('hidden');
+            oneway.classList.add('hidden');
+            partial_time.classList.add('hidden');
+             
         }
     });
     // Show/Hide Number of Foot bridge Form
@@ -613,25 +638,35 @@
         const trafficlight1 = document.getElementById('trafficlight1');
         const trafficlight2 = document.getElementById('trafficlight2');
         const trafficlight3 = document.getElementById('trafficlight3');
+        const trafficlight4 = document.getElementById('trafficlight4');
 
         if (this.value === 'One') {
             trafficlight1.classList.remove('hidden');
             trafficlight2.classList.add('hidden');
             trafficlight3.classList.add('hidden');
+            trafficlight4.classList.add('hidden');
 
         } else if (this.value === 'Two') {
             trafficlight1.classList.remove('hidden');
             trafficlight2.classList.remove('hidden');
             trafficlight3.classList.add('hidden');
+            trafficlight4.classList.add('hidden');
         }
         else if (this.value === 'Three') {
             trafficlight1.classList.remove('hidden');
             trafficlight2.classList.remove('hidden');
             trafficlight3.classList.remove('hidden');
+            trafficlight4.classList.add('hidden');
+        } else if (this.value === 'Four') {
+            trafficlight1.classList.remove('hidden');
+            trafficlight2.classList.remove('hidden');
+            trafficlight3.classList.remove('hidden');
+            trafficlight4.classList.remove('hidden');
         } else {
             trafficlight1.classList.add('hidden');
             trafficlight2.classList.add('hidden');
             trafficlight3.classList.add('hidden');
+            trafficlight4.classList.add('hidden');
         }
 
     });
