--- a/templates/finalization_form.html
+++ b/templates/finalization_form.html
@@ -136,7 +136,7 @@
     <fieldset>
         <legend>Near Side: </legend>
         <div class="form-group">
-            <input type="text" id="nearSideCoordinates" name="nearSideCoordinates" placeholder="Pin-point on map" readonly>
+            <input type="text" id="nearSideCoordinates" name="nearSideCoordinates" placeholder="Pin-point on map" >
             <!-- Map Display -->
             <div id="near_side_map"></div>
 
@@ -147,8 +147,7 @@
     <fieldset>
         <legend>Far Side: </legend>
         <div class="form-group">
-            <input type="text" id="farSideCoordinates" name="farSideCoordinates" placeholder="Pin-point on map"
-                readonly>
+            <input type="text" id="farSideCoordinates" name="farSideCoordinates" placeholder="Pin-point on map">
             <!-- Map Display -->
             <div id="far_side_map"></div>
 
