--- a/templates/finalization_form.html
+++ b/templates/finalization_form.html
@@ -24,8 +24,6 @@
 
     </select>
 
-
-
     <fieldset>
         <legend>Carriage-Way Width:</legend>
         <div class="form-group">
@@ -138,6 +136,7 @@
         <div class="form-group">
             <input type="text" id="nearSideCoordinates" name="nearSideCoordinates" placeholder="Pin-point on map" >
             <!-- Map Display -->
+            <button type="button" class="btnGetLoc" id="btnGetLoc">Locate Me</button>
             <div id="near_side_map"></div>
 
             <input type="file" id="near_side_picture" name="near_side_picture"><br>
@@ -149,6 +148,7 @@
         <div class="form-group">
             <input type="text" id="farSideCoordinates" name="farSideCoordinates" placeholder="Pin-point on map">
             <!-- Map Display -->
+            <button type="button" class="btnGetLoc" id="btnGetLoc">Locate Me</button>
             <div id="far_side_map"></div>
 
             <input type="file" id="far_side_picture" name="far_side_picture"><br>
