--- a/templates/roadway_far_school.html
+++ b/templates/roadway_far_school.html
@@ -152,11 +152,11 @@
         <div class="form-group">
             <div id="width_one_block" class="hidden">
                 <label for="width_side_one">7.1. Width of Side One:</label>
-                <input type="number" id="width_side_one" name="width_side_one">
+                <input type="number" id="width_side_one" name="width_side_one" min="0" max="1000" step="0.01">
             </div>
             <div id="width_two_block" class="hidden">
                 <label for="width_side_two">7.2. Width of Side Two:</label>
-                <input type="number" id="width_side_two" name="width_side_two">
+                <input type="number" id="width_side_two" name="width_side_two" min="0" max="1000" step="0.01">
             </div>
         </div>
 
