--- a/templates/roadway_far_school.html
+++ b/templates/roadway_far_school.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <h1>Roadway and Existing Facilities Form ( Far )</h1>
 <form action="{% url 'roadway_far_from_school_submission' school_id %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
@@ -169,7 +170,7 @@
             {# </div>#}
 
         <div class="form-group">
-            <img src="{% static "/media/gate.png" %}}"><br><br>
+            <img src="{% static 'gate.png' %}"><br><br>
             <label for="pictures_near_side">8. From near-side looking into far-side:</label>
             <input type="file" id="pictures_near_side" name="pictures_near_side"><br>
             <label for="pictures_far_side">9. From far-side looking into near-side:</label>
@@ -651,4 +652,12 @@
 
     });
 </script>
+    
+    
+    {% else %}
+    <form>
+        <p>You are not logged in</p>
+        <a href="{% url 'login' %}">Log In</a> 
+    </form>
+{% endif %}
 {% endblock %}
